==========
02/02/2008
==========

- Cadastro de CMS
- Estrutura de plugins de CMS

HORAS TRABALHADAS: 5h

==========
03/02/2008
==========

- Estrutura de plugins de CMS
- Plugin do tipo de CMS WordPress versao WordPress.com

HORAS TRABALHADAS: 5h