@@ -15,3 +15,12 @@ HORAS TRABALHADAS: 5h
 - Plugin do tipo de CMS WordPress versao WordPress.com
 
 HORAS TRABALHADAS: 5h
+
+==========
+04/02/2008
+==========
+
+- Application HTTP Client
+- Plugin do tipo de CMS WordPress versao WordPress.com
+
+HORAS TRABALHADAS: 7h
